service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kobimate-odoo18-service
spec:
  selector: 
    app: postgress-server
  type: ClusterIP  
  ports:
    - name: odoo
      port: 8069
    - name: longpolling
      port: 8072
  selector:
    app: kobimate-odoo18
