deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kobimate-odoo18
  namespace: default
  labels:
    app: odoo18-paket-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kobimate-odoo18
  template:
    metadata:
      labels:
        app: kobimate-odoo18
    spec:
      #imagePullSecrets:
      #  - name: git-sync-secret
      containers:
        - name: kobimate-odoo18
          image: ghcr.io/acsone/odoo-bedrock:18.0-py312-jammy-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8069
          volumeMounts:
            - name: odoo18-kobimate-volume
              mountPath: /data/odoo

      volumes:
        - name: odoo18-kobimate-volume
          persistentVolumeClaim:
            claimName: kobimate-odoo18-pvc
        
---
apiVersion: v1
kind: Service
metadata:
  name: kobimate-odoo18-service
spec:
  selector: 
    app: postgress-server
  type: ClusterIP  
  ports:
    - name: odoo
      port: 8069
    - name: longpolling
      port: 8072
  selector:
    app: kobimate-odoo18
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kobimate-odoo18-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: http-letsencrypt-prod      
spec:
  tls:
    - hosts:
      - kobimate.com
      secretName: kobimate-tls
  rules:
    - host: odoo18.kobimate.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kobimate-odoo18-service
                port:
                  number: 8069
---
